--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.731.1",
+    "@grpc/grpc-js": "^1.12.6",
+    "@grpc/proto-loader": "^0.7.13",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
+    "framer-motion": "^12.3.1",
+    "google-auth-library": "^9.15.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.4",
     "morgan": "^1.10.0",
