--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "uuid": "^11.0.5"
   },
   "devDependencies": {
+    "@types/amqplib": "^0.10.7",
     "@types/express": "^5.0.0",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.10.7",
@@ -31,6 +32,7 @@
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.20.0",
     "@typescript-eslint/parser": "^8.20.0",
+    "amqplib": "^0.10.5",
     "eslint": "^9.18.0",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
