--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.21.2",
     "mongoose": "^8.9.5",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
     "redis": "^4.7.0",
     "uuid": "^11.0.5"
@@ -27,6 +28,7 @@
     "@types/amqplib": "^0.10.7",
     "@types/express": "^5.0.0",
     "@types/morgan": "^1.9.9",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.10.7",
     "@types/node-cron": "^3.0.11",
     "@types/uuid": "^10.0.0",
