--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express-session": "^1.18.1",
     "framer-motion": "^12.3.1",
     "google-auth-library": "^9.15.1",
+    "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.4",
     "morgan": "^1.10.0",
@@ -36,7 +37,6 @@
     "otp-generator": "^4.0.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
-    "redis": "^4.7.0",
     "winston": "^3.17.0"
   },
   "devDependencies": {
