--- a/payment-service/Dockerfile
+++ b/payment-service/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:18-alpine AS builder
+FROM node:23-alpine
 
 WORKDIR /app
 
@@ -10,15 +10,6 @@ COPY . .
 
 RUN npm run build
 
-# --- Production Image ---
-FROM node:18-alpine
+EXPOSE 3003
 
-WORKDIR /app
-
-COPY --from=builder /app/dist ./dist
-COPY --from=builder /app/package.json ./
-COPY --from=builder /app/node_modules ./node_modules
-
-EXPOSE 3004
-
-CMD ["node", "dist/index.js"]
+CMD ["npm", "start"]
