--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -64,6 +64,11 @@ jobs:
         with:
           version: latest
 
+      - name: Install gke-gcloud-auth-plugin
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y google-cloud-sdk-gke-gcloud-auth-plugin
+
       - name: Configure Kubeconfig to connect to GKE
         run: |
           mkdir -p $HOME/.kube
