--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -59,10 +59,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
       
-      - name: Install gke-gcloud-auth-plugin
+      - name: Install Google Cloud SDK
         run: |
           sudo apt-get update
-          sudo apt-get install -y google-cloud-sdk-gke-gcloud-auth-plugin    
+          sudo apt-get install -y google-cloud-sdk
+      
+      - name: Install GKE Auth Plugin
+        run: |
+          gcloud components install gke-gcloud-auth-plugin   
 
       - name: Set up kubectl
         uses: azure/setup-kubectl@v3
