--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -42,7 +42,7 @@ jobs:
   deploy:
     name: Deploy to GKE
     runs-on: ubuntu-latest
-    needs: build-and-push
+    needs: build-and-push # Ensure images are built and pushed before deployment
 
     strategy:
       matrix:
@@ -58,31 +58,40 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      
-      - name: Install Google Cloud SDK
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y google-cloud-sdk
-      
-      - name: Install GKE Auth Plugin
-        run: |
-          gcloud components install gke-gcloud-auth-plugin   
 
-      - name: Set up kubectl
-        uses: azure/setup-kubectl@v3
+      - name: Authenticate to Google Cloud
+        # This action authenticates your GitHub Actions workflow with Google Cloud.
+        # It requires a service account key as a GitHub secret.
+        uses: google-github-actions/auth@v2
         with:
-          version: latest
+          project_id: ${{ secrets.GCP_PROJECT_ID }} # Your Google Cloud Project ID
+          credentials_json: ${{ secrets.GCP_SA_KEY }} # Service Account Key JSON
 
-      - name: Configure Kubeconfig to connect to GKE
-        run: |
-          mkdir -p $HOME/.kube
-          echo "${{ secrets.KUBE_CONFIG }}" | base64 --decode > $HOME/.kube/config
+      - name: Set up gcloud CLI
+        # Sets up the Google Cloud SDK (gcloud CLI) environment.
+        uses: google-github-actions/setup-gcloud@v2
+
+      - name: Get GKE credentials
+        # Retrieves kubectl credentials for your GKE cluster.
+        uses: google-github-actions/get-gke-credentials@v2
+        with:
+          cluster_name: ${{ secrets.GKE_CLUSTER }} # Name of your GKE cluster
+          location: ${{ secrets.GKE_ZONE }} # Zone or region where your GKE cluster is located (e.g., us-central1-a or us-central1)
 
       - name: Apply Kubernetes manifests
+        # Applies all Kubernetes manifests from the centralized 'k8s/' directory.
+        # This assumes all service deployments, services, ingress, cluster-issuer, etc.,
+        # are defined in .yaml files directly within the 'k8s/' folder.
         run: |
+          echo "Applying all Kubernetes manifests from ./k8s/..."
           kubectl apply -f ./k8s/
+          echo "All Kubernetes manifests applied."
 
       - name: Restart and wait for rollout of ${{ matrix.deployment }}
+        # This step ensures that the deployment is restarted and waits for it to be stable.
+        # It uses the matrix variable to target each specific deployment by its name.
         run: |
+          echo "Restarting and waiting for rollout of ${{ matrix.deployment }}..."
           kubectl rollout restart deployment ${{ matrix.deployment }}
           kubectl rollout status deployment ${{ matrix.deployment }} --timeout=120s
+          echo "${{ matrix.deployment }} rollout complete."
