--- a/user-service/package.json
+++ b/user-service/package.json
@@ -19,6 +19,8 @@
     "amqplib": "^0.10.5",
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
