Fix: s3 public url changed to signedUrl, more dto's added

--- a/user-service/package.json
+++ b/user-service/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.731.1",
+    "@aws-sdk/s3-request-presigner": "^3.862.0",
     "@grpc/grpc-js": "^1.12.6",
     "@grpc/proto-loader": "^0.7.13",
     "amqplib": "^0.10.5",
