--- a/user-service/package.json
+++ b/user-service/package.json
@@ -40,6 +40,9 @@
     "otp-generator": "^4.0.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "pino": "^9.10.0",
+    "pino-http": "^10.5.0",
+    "pino-pretty": "^13.1.1",
     "winston": "^3.17.0"
   },
   "devDependencies": {
